--- a/templates/actor/common/actor-item-button.html
+++ b/templates/actor/common/actor-item-button.html
@@ -1,25 +1,25 @@
-{{#ifEq item.data.invokableType "Arcane Ritual"}}
-  <button type="button" class="item-button rollable action-invokable" data-label="{{localize 'PB.Invoke'}}" title="{{item.data.actionMacroLabel}}">
+{{#ifEq item.system.invokableType "Arcane Ritual"}}
+  <button type="button" class="item-button rollable action-invokable" data-label="{{localize 'PB.Invoke'}}" title="{{item.system.actionMacroLabel}}">
     {{localize "PB.InvokeRitual"}}
   </button>
 {{/ifEq}} 
 
-{{#ifEq item.data.invokableType "Ancient Relic"}}
-  <button type="button" class="item-button rollable action-invokable" data-label="{{localize 'PB.Invoke'}}" title="{{item.data.actionMacroLabel}}">
+{{#ifEq item.system.invokableType "Ancient Relic"}}
+  <button type="button" class="item-button rollable action-invokable" data-label="{{localize 'PB.Invoke'}}" title="{{item.system.actionMacroLabel}}">
     {{localize "PB.InvokeRelic"}}
   </button>
 {{/ifEq}} 
 
-{{#ifNe item.data.invokableType "Arcane Ritual"}} 
-  {{#ifNe item.data.invokableType "Ancient Relic"}} 
-    {{#if item.data.invokableType}}
-      <button type="button" class="item-button rollable action-invokable" data-label="{{localize 'PB.Invoke'}}" title="{{item.data.actionMacroLabel}}">
+{{#ifNe item.system.invokableType "Arcane Ritual"}}
+  {{#ifNe item.system.invokableType "Ancient Relic"}}
+    {{#if item.system.invokableType}}
+      <button type="button" class="item-button rollable action-invokable" data-label="{{localize 'PB.Invoke'}}" title="{{item.system.actionMacroLabel}}">
         {{localize "PB.Invoke"}}
       </button>
     {{else}} 
-      {{#if item.data.actionMacroLabel}}
-        <button type="button" class="item-button rollable action-macro-button" data-label="{{item.data.actionMacroLabel}}" title="{{item.data.actionMacroLabel}}">
-          {{item.data.actionMacroLabel}}
+      {{#if item.system.actionMacroLabel}}
+        <button type="button" class="item-button rollable action-macro-button" data-label="{{item.system.actionMacroLabel}}" title="{{item.system.actionMacroLabel}}">
+          {{item.system.actionMacroLabel}}
         </button>
       {{/if}} 
     {{/if}} 
