--- a/templates/actor/vehicle-edit-sheet.html
+++ b/templates/actor/vehicle-edit-sheet.html
@@ -2,14 +2,14 @@
   {{!-- Sheet Header --}}
   <header class="sheet-header">
     <div class="header-col1">
-      <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
+      <img class="profile-img" src="{{data.img}}" data-edit="img" title="{{data.name}}" />
     </div>
     <div class="header-col2">
       <div class="header-title-row">
-        <input class="actor-name container-name" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'PB.Name' }}" />
+        <input class="actor-name container-name" name="name" type="text" value="{{data.name}}" placeholder="{{ localize 'PB.Name' }}" />
       </div>
       <div class="header-subtitle-row">
-        <div class="actor-type">{{actor.type}}</div>
+        <div class="actor-type">{{data.type}}</div>
       </div>
     </div>
   </header>
@@ -26,7 +26,7 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=data.data.description target="data.description" button=true owner=owner editable=true}}
+      {{wysiwig content=data.system.description target="system.description" button=true owner=owner editable=true}}
     </div>
 
     <div class="tab equipment-tab" data-group="primary" data-tab="items">
@@ -38,89 +38,89 @@
     <div class="tab" data-group="primary" data-tab="data">
       <div class="form-group">
         <label>{{localize "PB.ItemSpecial"}}:</label>
-        <textarea name="data.special" rows="8">{{data.data.special}}</textarea>
+        <textarea name="system.special" rows="8">{{data.system.special}}</textarea>
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemCurrentHp" }}:</label>
-        <input type="text" name="data.attributes.hp.value" value="{{data.data.attributes.hp.value}}" placeholder="2" data-dtype="Number" />
+        <input type="text" name="system.attributes.hp.value" value="{{data.system.attributes.hp.value}}" placeholder="2" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemMaxHp" }}:</label>
-        <input type="text" name="data.attributes.hp.max" value="{{data.data.attributes.hp.max}}" placeholder="2" data-dtype="Number" />
+        <input type="text" name="system.attributes.hp.max" value="{{data.system.attributes.hp.max}}" placeholder="2" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemAbilitiesAgility" }}:</label>
-        <input type="text" name="data.abilities.agility.value" value="{{data.data.abilities.agility.value}}" placeholder="0" data-dtype="Number" />
+        <input type="text" name="system.abilities.agility.value" value="{{data.system.abilities.agility.value}}" placeholder="0" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemAbilitiesSkill" }}:</label>
-        <input type="text" name="data.abilities.skill.value" value="{{data.data.abilities.skill.value}}" placeholder="0" data-dtype="Number" />
+        <input type="text" name="system.abilities.skill.value" value="{{data.system.abilities.skill.value}}" placeholder="0" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemSpeedMax" }}:</label>
-        <input type="text" name="data.attributes.speed.max" value="{{data.data.attributes.speed.max}}" placeholder="2" data-dtype="Number" />
+        <input type="text" name="system.attributes.speed.max" value="{{data.system.attributes.speed.max}}" placeholder="2" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemCargo" }}:</label>
-        <input type="text" name="data.attributes.cargo.max" value="{{data.data.attributes.cargo.max}}" placeholder="0" data-dtype="Number" />
+        <input type="text" name="system.attributes.cargo.max" value="{{data.system.attributes.cargo.max}}" placeholder="0" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemCrew" }}:</label>
-        <input type="text" name="data.attributes.crew.value" value="{{data.data.attributes.crew.value}}" placeholder="0" data-dtype="Number" />
+        <input type="text" name="system.attributes.crew.value" value="{{data.system.attributes.crew.value}}" placeholder="0" data-dtype="Number" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemCrewMin" }}:</label>
-        <input type="text" name="data.attributes.crew.min" value="{{data.data.attributes.crew.min}}" placeholder="0" data-dtype="Number" />
+        <input type="text" name="system.attributes.crew.min" value="{{data.system.attributes.crew.min}}" placeholder="0" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemCrewMax" }}:</label>
-        <input type="text" name="data.attributes.crew.max" value="{{data.data.attributes.crew.max}}" placeholder="0" data-dtype="Number" />
+        <input type="text" name="system.attributes.crew.max" value="{{data.system.attributes.crew.max}}" placeholder="0" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemSmallArmsDie" }}:</label>
-        <input type="text" name="data.weapons.smallArms.die" value="{{data.data.weapons.smallArms.die}}" placeholder="1d6" data-dtype="String" />
+        <input type="text" name="system.weapons.smallArms.die" value="{{data.system.weapons.smallArms.die}}" placeholder="1d6" data-dtype="String" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemSmallArmsQuantity" }}:</label>
-        <input type="text" name="data.weapons.smallArms.quantity" value="{{data.data.weapons.smallArms.quantity}}" placeholder="1" data-dtype="Number" />
+        <input type="text" name="system.weapons.smallArms.quantity" value="{{data.system.weapons.smallArms.quantity}}" placeholder="1" data-dtype="Number" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemSmallArmsWarning" }}:</label>
-        <input type="text" name="data.weapons.smallArms.warning" value="{{data.data.weapons.smallArms.warning}}" placeholder="" data-dtype="String" />
+        <input type="text" name="system.weapons.smallArms.warning" value="{{data.system.weapons.smallArms.warning}}" placeholder="" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemBroadsidesDie" }}:</label>
-        <input type="text" name="data.weapons.broadsides.die" value="{{data.data.weapons.broadsides.die}}" placeholder="1d6" data-dtype="String" />
+        <input type="text" name="system.weapons.broadsides.die" value="{{data.system.weapons.broadsides.die}}" placeholder="1d6" data-dtype="String" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemBroadsidesQuantity" }}:</label>
-        <input type="text" name="data.weapons.broadsides.quantity" value="{{data.data.weapons.broadsides.quantity}}" placeholder="1" data-dtype="Number" />
+        <input type="text" name="system.weapons.broadsides.quantity" value="{{data.system.weapons.broadsides.quantity}}" placeholder="1" data-dtype="Number" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemBroadsidesWarning" }}:</label>
-        <input type="text" name="data.weapons.broadsides.warning" value="{{data.data.weapons.broadsides.warning}}" placeholder="" data-dtype="String" />
+        <input type="text" name="system.weapons.broadsides.warning" value="{{data.system.weapons.broadsides.warning}}" placeholder="" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemRamDie" }}:</label>
-        <input type="text" name="data.weapons.ram.die" value="{{data.data.weapons.ram.die}}" placeholder="1d6" data-dtype="String" />
+        <input type="text" name="system.weapons.ram.die" value="{{data.system.weapons.ram.die}}" placeholder="1d6" data-dtype="String" />
       </div>
 
       {{! Armor Current Tier }}
       <div class="form-group">
         <label>{{localize "PB.ItemHullCurrentTier"}}:</label>
-        <select name="data.attributes.hull.value" data-dtype="Number">
-          {{#select data.data.attributes.hull.value}} {{#each config.armorTiers as |tierObj tierNum|}}
+        <select name="system.attributes.hull.value" data-dtype="Number">
+          {{#select data.system.attributes.hull.value}} {{#each config.armorTiers as |tierObj tierNum|}}
           <option value="{{tierNum}}">{{tierNum}} ({{localize tierObj.key}})</option>
           {{/each}} {{/select}}
         </select>
@@ -129,8 +129,8 @@
       {{! Armor Max Tier }}
       <div class="form-group">
         <label>{{ localize "PB.ItemHullMaxTier" }}:</label>
-        <select name="data.attributes.hull.max" data-dtype="Number">
-          {{#select data.data.attributes.hull.max}} {{#each config.armorTiers as |tierObj tierNum|}}
+        <select name="system.attributes.hull.max" data-dtype="Number">
+          {{#select data.system.attributes.hull.max}} {{#each config.armorTiers as |tierObj tierNum|}}
           <option value="{{tierNum}}">{{tierNum}} ({{localize tierObj.key}})</option>
           {{/each}} {{/select}}
         </select>
