--- a/templates/actor/vehicle-sheet.html
+++ b/templates/actor/vehicle-sheet.html
@@ -3,31 +3,31 @@
   <header class="sheet-header">
 
     <div class="header-col1">
-      <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
+      <img class="profile-img" src="{{data.img}}" data-edit="img" title="{{data.name}}" />
     </div>
 
     <div class="header-col2">
       <div class="header-title-row">
-        <input class="actor-name container-name" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'PB.Name' }}" />
+        <input class="actor-name container-name" name="name" type="text" value="{{data.name}}" placeholder="{{ localize 'PB.Name' }}" />
       </div>
       <div class="header-subtitle-row">
-        <div class="actor-type">{{actor.type}}</div>
+        <div class="actor-type">{{data.type}}</div>
       </div>
 
       <div class="header-stats-row">
         <div class="stats-block">
           <span class="stat-label">{{ localize "PB.HP" }}</span>
-          <input class="stat-input" name="data.attributes.hp.value" type="number" value="{{data.data.attributes.hp.value}}" data-dtype="Number" />
+          <input class="stat-input" name="system.attributes.hp.value" type="number" value="{{data.system.attributes.hp.value}}" data-dtype="Number" />
           <span class="stat-separator">/</span>
-          <input class="stat-input" name="data.attributes.hp.max" type="number" value="{{data.data.attributes.hp.max}}" data-dtype="Number" />
+          <input class="stat-input" name="system.attributes.hp.max" type="number" value="{{data.system.attributes.hp.max}}" data-dtype="Number" />
         </div>
       </div>
       
       <div class="header-stats-row">
         <div class="stats-block">
           <span class="stat-label">{{ localize "PB.ShipCrew" }}</span>
-          <input class="stat-input" name="data.attributes.crew.value" type="number" value="{{data.data.attributes.crew.value}}" data-dtype="Number" />
-          <span class="stat-rule">{{data.data.attributes.crew.min}} / {{data.data.attributes.crew.max}}</span>  
+          <input class="stat-input" name="system.attributes.crew.value" type="number" value="{{data.system.attributes.crew.value}}" data-dtype="Number" />
+          <span class="stat-rule">{{data.system.attributes.crew.min}} / {{data.system.attributes.crew.max}}</span>  
         </div>
       </div>
     </div>
@@ -37,8 +37,8 @@
         <input
           class="ability-input"
           type="text"
-          name="data.abilities.agility.value"
-          value="{{numberFormat data.data.abilities.agility.value decimals=0 sign=true}}"
+          name="system.abilities.agility.value"
+          value="{{numberFormat data.system.abilities.agility.value decimals=0 sign=true}}"
           data-dtype="Number"
           size="3"
         />
@@ -48,8 +48,8 @@
         <input
           class="ability-input"
           type="text"
-          name="data.abilities.skill.value"
-          value="{{numberFormat data.data.abilities.skill.value decimals=0 sign=true}}"
+          name="system.abilities.skill.value"
+          value="{{numberFormat data.system.abilities.skill.value decimals=0 sign=true}}"
           data-dtype="Number"
           size="3"
         />
@@ -59,8 +59,8 @@
         <input
           class="ability-input"
           type="text"
-          name="data.attributes.speed.max"
-          value="{{data.data.attributes.speed.max}}"
+          name="system.attributes.speed.max"
+          value="{{data.system.attributes.speed.max}}"
           data-dtype="Number"
           size="3"
         />
@@ -74,12 +74,12 @@
   <section class="sheet-body">
     <div class="tab combat-tab">      
       <div class="description">
-        {{{data.data.description}}}
+        {{{data.system.description}}}
       </div>      
 
       {{#if special}}
         <div class="special">
-          {{data.data.special}}
+          {{data.system.special}}
         </div>
       {{/if}}
 
@@ -99,15 +99,15 @@
         {{#> "systems/pirateborg/templates/actor/common/dynamic-list.html" }}
           {{> @partial-block }}
         {{/"systems/pirateborg/templates/actor/common/dynamic-list.html"}}
-      {{/inline}} 
-      
+      {{/inline}}
+
       {{#*inline "crew-action"}}
         {{#> static-list-item type="crew-action" class=class}}
           <img src="{{img}}" title="{{localize name}}" width="24" height="24" />
           <h4 class="item-name">
             {{localize name}}
           </h4>
-          
+
           <div class="item-ship-damage">
             {{#if quantity}}{{ quantity }} x {{/if}}{{ die }}
           </div>
@@ -116,9 +116,9 @@
             {{#if has-pc-action}}
               <button type="button" class="item-button rollable action-pc-action" data-action="{{class}}" title="PC Action">
                 {{#if (eq ../data.type "vehicle_npc")}}
-                  {{localize "PB.ShipNPCAction"}} 
+                  {{localize "PB.ShipNPCAction"}}
                 {{else}}
-                  {{localize "PB.ShipPCAction"}} 
+                  {{localize "PB.ShipPCAction"}}
                 {{/if}}
               </button>
             {{/if}}
@@ -129,10 +129,10 @@
             {{/if}}
           </div>
         {{/static-list-item}}
-        
+
         {{#if warning}}
-            {{#> static-list-item class="item-warning"}}
-            <div class="rule-text you-have-no {{#if enableWarning}}warning{{/if}}" >{{warning}}</div>  
+          {{#> static-list-item class="item-warning"}}
+            <div class="rule-text you-have-no {{#if enableWarning}}warning{{/if}}" >{{warning}}</div>
           {{/static-list-item}}
         {{/if}}
       {{/inline}}
@@ -143,25 +143,25 @@
           <ul class="tiers">
             <li>
               <label>
-                <input class="tier-radio" type="radio" name="hull.value" value="0" {{#ifEq data.data.attributes.hull.value 0}}checked{{/ifEq}}/>
+                <input class="tier-radio" type="radio" name="hull.value" value="0" {{#ifEq data.system.attributes.hull.value 0}}checked{{/ifEq}}/>
                 <span class="tier-num">0</span>
               </label>
             </li>
             <li>
               <label>
-                <input class="tier-radio" type="radio" name="hull.value" value="1" {{#ifLt data.data.attributes.hull.max 1}}disabled{{/ifLt}} {{#ifEq data.data.attributes.hull.value 1}}checked{{/ifEq}}/>
+                <input class="tier-radio" type="radio" name="hull.value" value="1" {{#ifLt data.system.attributes.hull.max 1}}disabled{{/ifLt}} {{#ifEq data.system.attributes.hull.value 1}}checked{{/ifEq}}/>
                 <span class="tier-num">d2</span>
               </label>
             </li>
             <li>
               <label
-                ><input class="tier-radio" type="radio" name="hull.value" value="2" {{#ifLt data.data.attributes.hull.max 2}}disabled{{/ifLt}} {{#ifEq data.data.attributes.hull.value 2}}checked{{/ifEq}}/>
+                ><input class="tier-radio" type="radio" name="hull.value" value="2" {{#ifLt data.system.attributes.hull.max 2}}disabled{{/ifLt}} {{#ifEq data.system.attributes.hull.value 2}}checked{{/ifEq}}/>
                 <span class="tier-num">d4</span>
               </label>
             </li>
             <li>
               <label
-                ><input class="tier-radio" type="radio" name="hull.value" value="3" {{#ifLt data.data.attributes.hull.max 3}}disabled{{/ifLt}} {{#ifEq data.data.attributes.hull.value 3}}checked{{/ifEq}}/>
+                ><input class="tier-radio" type="radio" name="hull.value" value="3" {{#ifLt data.system.attributes.hull.max 3}}disabled{{/ifLt}} {{#ifEq data.system.attributes.hull.value 3}}checked{{/ifEq}}/>
                 <span class="tier-num">d6</span>
               </label>
             </li>
@@ -170,13 +170,13 @@
         <div class="ship-actions">
           <button type="button" class="button item-button icon-button rotate-left" title="{{localize 'PB.ShipRotateLeft'}}">
             <i class="fas fa-undo"></i>
-          </button>   
+          </button>
           <button type="button" class="button item-button icon-button rotate-right" title="{{localize 'PB.ShipRotateRight'}}">
             <i class="fas fa-redo"></i>
-          </button>                 
+          </button>
           <button type="button" class="button item-button sinking-button" title="{{localize 'PB.ShipSinking'}}">
             {{localize "PB.ShipSinking"}}
-          </button>          
+          </button>
           <button type="button" class="button item-button initiative-button" title="{{localize 'PB.Initiative'}}">
             {{localize "PB.Initiative"}}
           </button>
@@ -184,45 +184,45 @@
       </div>
 
       {{#> static-list label="PB.ShipCrewActions" }}
-        {{#if data.data.weapons.broadsides.quantity}}
-          {{> crew-action 
-            name="PB.ShipCrewActionBroadsides" 
-            class="broadsides" 
-            img="systems/pirateborg/icons/misc/broadside.png" 
-            die=data.data.weapons.broadsides.die 
-            quantity=data.data.weapons.broadsides.quantity
-            warning=data.data.weapons.broadsides.warning
-            enableWarning=data.data.dynamic.hasBroadsidesPenalties
-            has-pc-action=data.data.dynamic.hasCrew 
-            has-crew-action=true 
-          }}
-        {{/if}}
-        {{#if data.data.weapons.smallArms.quantity}}
-          {{> crew-action 
-            name="PB.ShipCrewActionSmallArms" 
-            class="small-arms" 
-            img="systems/pirateborg/icons/misc/small-arm.png" 
-            die=data.data.weapons.smallArms.die 
-            quantity=data.data.weapons.smallArms.quantity
-            warning=data.data.weapons.smallArms.warning
-            enableWarning=data.data.dynamic.hasSmallArmsPenalties
-            has-pc-action=data.data.dynamic.hasCrew
+        {{#if data.system.weapons.broadsides.quantity}}
+          {{> crew-action
+            name="PB.ShipCrewActionBroadsides"
+            class="broadsides"
+            img="systems/pirateborg/icons/misc/broadside.png"
+            die=data.system.weapons.broadsides.die
+            quantity=data.system.weapons.broadsides.quantity
+            warning=data.system.weapons.broadsides.warning
+            enableWarning=data.system.dynamic.hasBroadsidesPenalties
+            has-pc-action=data.system.dynamic.hasCrew
             has-crew-action=true
           }}
         {{/if}}
-        {{> crew-action name="PB.ShipCrewActionFullSail" class="full-sail" img="systems/pirateborg/icons/misc/full-sail.png" has-pc-action=data.data.dynamic.hasCrew has-crew-action=true }}
-        {{> crew-action name="PB.ShipCrewActionComeAbout" class="come-about" img="systems/pirateborg/icons/misc/come-about.png" has-pc-action=data.data.dynamic.hasCrew has-crew-action=true  }}
+        {{#if data.system.weapons.smallArms.quantity}}
+          {{> crew-action
+            name="PB.ShipCrewActionSmallArms"
+            class="small-arms"
+            img="systems/pirateborg/icons/misc/small-arm.png"
+            die=data.system.weapons.smallArms.die
+            quantity=data.system.weapons.smallArms.quantity
+            warning=data.system.weapons.smallArms.warning
+            enableWarning=data.system.dynamic.hasSmallArmsPenalties
+            has-pc-action=data.system.dynamic.hasCrew
+            has-crew-action=true
+          }}
+        {{/if}}
+        {{> crew-action name="PB.ShipCrewActionFullSail" class="full-sail" img="systems/pirateborg/icons/misc/full-sail.png" has-pc-action=data.system.dynamic.hasCrew has-crew-action=true }}
+        {{> crew-action name="PB.ShipCrewActionComeAbout" class="come-about" img="systems/pirateborg/icons/misc/come-about.png" has-pc-action=data.system.dynamic.hasCrew has-crew-action=true  }}
         {{> crew-action name="PB.ShipCrewActionDropAnchor" class="drop-anchor" img="systems/pirateborg/icons/misc/anchor.png" has-crew-action=true}}
         {{> crew-action name="PB.ShipCrewActionWeighAnchor" class="weigh-anchor" img="systems/pirateborg/icons/misc/anchor.png" has-crew-action=true}}
-        {{> crew-action name="PB.ShipCrewActionRepair" class="repair" img="systems/pirateborg/icons/misc/repair.png" has-pc-action=data.data.dynamic.hasCrew has-crew-action=true }}
+        {{> crew-action name="PB.ShipCrewActionRepair" class="repair" img="systems/pirateborg/icons/misc/repair.png" has-pc-action=data.system.dynamic.hasCrew has-crew-action=true }}
         {{> crew-action name="PB.ShipCrewActionBoardingParty" class="boarding-party" img="systems/pirateborg/icons/misc/boarding-party.png" has-crew-action=true}}
-        {{> crew-action name="PB.ShipCrewActionRam" class="ram" img="systems/pirateborg/icons/misc/ram.png" has-crew-action=true die=data.data.weapons.ram.die }}                
+        {{> crew-action name="PB.ShipCrewActionRam" class="ram" img="systems/pirateborg/icons/misc/ram.png" has-crew-action=true die=data.system.weapons.ram.die }}
       {{/static-list}}
 
-      {{> dynamic-list items=data.data.dynamic.crews type="crew" label="PB.ShipCrew" emptyMessage="PB.EmptyCrew"}}
+      {{> dynamic-list items=data.system.dynamic.crews type="crew" label="PB.ShipCrew" emptyMessage="PB.EmptyCrew"}}
 
-      {{#ifGt data.data.attributes.cargo.max 0}}
-        {{> dynamic-list items=data.data.dynamic.cargos type="cargo" label="PB.ShipCargo" create=true emptyMessage="PB.EmptyCargo" maxQuantity=data.data.attributes.cargo.max currentQuantity=data.data.attributes.cargo.value }}
+      {{#ifGt data.system.attributes.cargo.max 0}}
+        {{> dynamic-list items=data.system.dynamic.cargos type="cargo" label="PB.ShipCargo" create=true emptyMessage="PB.EmptyCargo" maxQuantity=data.system.attributes.cargo.max currentQuantity=data.system.attributes.cargo.value }}
       {{/ifGt}}
 
       {{#if (eq data.type 'vehicle')}}
@@ -230,15 +230,15 @@
           {{#*inline "extra-header"}}
             <div class="stats-block">
               <span class="stat-rule mystic-shanties-roll-button rollable">({{ localize "PB.ShipShantiesPerRest"}})</span>
-              <input class="stat-input" name="data.attributes.shanties.value" type="number" value="{{data.data.attributes.shanties.value}}" data-dtype="Number" />
+              <input class="stat-input" name="system.attributes.shanties.value" type="number" value="{{data.system.attributes.shanties.value}}" data-dtype="Number" />
             </div>
-          {{/inline}} 
-          {{> dynamic-list items=data.data.dynamic.mysticShanties type="mysticShanty" label="PB.ShipMysticShanties" emptyMessage="PB.ShipMysticShantiesEmpty" }}
+          {{/inline}}
+          {{> dynamic-list items=data.system.dynamic.mysticShanties type="mysticShanty" label="PB.ShipMysticShanties" emptyMessage="PB.ShipMysticShantiesEmpty" }}
         {{/inline}}
         {{> mystic-chanties}}
       {{/if}}
 
-      {{> dynamic-list items=data.data.dynamic.features type="feature" label="PB.ShipFeatures"}}
+      {{> dynamic-list items=data.system.dynamic.features type="feature" label="PB.ShipFeatures"}}
 
       <ol class="items-list equipment-list">
         {{> "systems/pirateborg/templates/actor/common/actor-equipment-list.html" sectionTitle=(localize "PB.Storage")}}
