--- a/templates/item/armor-sheet.html
+++ b/templates/item/armor-sheet.html
@@ -2,14 +2,14 @@
   {{! Item Sheet Header }}
   <header class="sheet-header flexrow">
     <div class="header-col1">
-      <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img" />
+      <img class="profile-img" src="{{data.img}}" title="{{data.name}}" data-edit="img" />
     </div>
     <div class="header-col2">
       <div class="header-title-row">
-        <input name="name" type="text" value="{{item.name}}" placeholder="{{localize 'PB.ItemName'}}" />
+        <input name="name" type="text" value="{{data.name}}" placeholder="{{localize 'PB.ItemName'}}" />
       </div>
       <div class="header-subtitle-row">
-        <span class="item-type">{{item.type}} {{#if item.data.tier.max}} - {{localize (lookup (lookup config.armorTiers item.data.tier.max) 'key') }}{{/if}}</span>
+        <span class="item-type">{{data.type}} {{#if data.system.tier.max}} - {{localize (lookup (lookup config.armorTiers data.system.tier.max) 'key') }}{{/if}}</span>
       </div>
     </div>
   </header>
@@ -26,7 +26,7 @@
   <section class="sheet-body">
     {{! Description Tab }}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=item.data.description target="data.description" button=true owner=owner editable=true}}
+      {{wysiwig content=data.system.description target="system.description" button=true owner=owner editable=true}}
     </div>
 
     {{! Details Tab }}
@@ -34,26 +34,26 @@
       {{! Price }}
       <div class="form-group">
         <label>{{localize "PB.ItemPrice"}}:</label>
-        <input type="text" name="data.price" value="{{item.data.price}}" placeholder="2" data-dtype="Number" />
+        <input type="text" name="system.price" value="{{data.system.price}}" placeholder="2" data-dtype="Number" />
       </div>
 
       {{! Carry weight }}
       <div class="form-group">
         <label>{{localize "PB.CarryWeight"}}:</label>
-        <input type="text" name="data.carryWeight" value="{{item.data.carryWeight}}" placeholder="1" data-dtype="Number" />
+        <input type="text" name="system.carryWeight" value="{{data.system.carryWeight}}" placeholder="1" data-dtype="Number" />
       </div>
 
       {{! Container space }}
       <div class="form-group">
         <label>{{localize "PB.ContainerSpace"}}:</label>
-        <input type="text" name="data.containerSpace" value="{{item.data.containerSpace}}" placeholder="1" data-dtype="Number" />
+        <input type="text" name="system.containerSpace" value="{{data.system.containerSpace}}" placeholder="1" data-dtype="Number" />
       </div>
 
       {{! Armor Current Tier }}
       <div class="form-group">
         <label>{{localize "PB.ArmorCurrentTier"}}:</label>
-        <select name="data.tier.value" data-dtype="Number">
-          {{#select item.data.tier.value}} {{#each config.armorTiers as |tierObj tierNum|}}
+        <select name="system.tier.value" data-dtype="Number">
+          {{#select data.system.tier.value}} {{#each config.armorTiers as |tierObj tierNum|}}
           <option value="{{tierNum}}">{{tierNum}} ({{localize tierObj.key}})</option>
           {{/each}} {{/select}}
         </select>
@@ -62,8 +62,8 @@
       {{! Armor Max Tier }}
       <div class="form-group">
         <label>{{localize "PB.ArmorMaxTier"}}:</label>
-        <select name="data.tier.max" data-dtype="Number">
-          {{#select item.data.tier.max}} {{#each config.armorTiers as |tierObj tierNum|}}
+        <select name="system.tier.max" data-dtype="Number">
+          {{#select data.system.tier.max}} {{#each config.armorTiers as |tierObj tierNum|}}
           <option value="{{tierNum}}">{{tierNum}} ({{localize tierObj.key}})</option>
           {{/each}} {{/select}}
         </select>
