--- a/templates/item/class-sheet.html
+++ b/templates/item/class-sheet.html
@@ -2,14 +2,14 @@
   {{! Item Sheet Header }}
   <header class="sheet-header flexrow">
     <div class="header-col1">
-      <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img" />
+      <img class="profile-img" src="{{data.img}}" title="{{data.name}}" data-edit="img" />
     </div>
     <div class="header-col2">
       <div class="header-title-row">
-        <input name="name" type="text" value="{{item.name}}" placeholder="{{localize 'PB.ItemName'}}" />
+        <input name="name" type="text" value="{{data.name}}" placeholder="{{localize 'PB.ItemName'}}" />
       </div>
       <div class="header-subtitle-row">
-        <span class="item-type">{{item.type}}</span>
+        <span class="item-type">{{data.type}}</span>
       </div>
     </div>
   </header>
@@ -26,7 +26,7 @@
   <section class="sheet-body">
     {{! Description Tab }}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=item.data.description target="data.description" button=true owner=owner editable=true}}
+      {{wysiwig content=data.system.description target="system.description" button=true owner=owner editable=true}}
     </div>
 
     {{! Details Tab }}
@@ -34,7 +34,7 @@
       {{! Flavor Text }}
       <div class="form-group">
         <label>{{localize "PB.FlavorText"}}:</label>
-        <textarea name="data.flavorText" rows="8">{{item.data.flavorText}}</textarea>
+        <textarea name="system.flavorText" rows="8">{{data.system.flavorText}}</textarea>
       </div>
 
       <br />
@@ -42,29 +42,29 @@
       {{! Luck Die }}
       <div class="form-group">
         <label>{{localize "PB.Luck"}}:</label>
-        <input type="text" name="data.luckDie" value="{{item.data.luckDie}}" placeholder="1d2" data-dtype="String" />
+        <input type="text" name="system.luckDie" value="{{data.system.luckDie}}" placeholder="1d2" data-dtype="String" />
       </div>
 
       {{! Starting equipment }}
       <div class="form-group">
         <label>{{localize "PB.WeaponTable"}}:</label>
-        <input type="text" name="data.startingWeaponTableFormula" value="{{item.data.startingWeaponTableFormula}}" placeholder="1d10" data-dtype="String" />
+        <input type="text" name="system.startingWeaponTableFormula" value="{{data.system.startingWeaponTableFormula}}" placeholder="1d10" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.HatTable"}}:</label>
-        <input type="text" name="data.startingHatTableFormula" value="{{item.data.startingHatTableFormula}}" placeholder="1d4" data-dtype="String" />
+        <input type="text" name="system.startingHatTableFormula" value="{{data.system.startingHatTableFormula}}" placeholder="1d4" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.ArmorTable"}}:</label>
-        <input type="text" name="data.startingArmorTableFormula" value="{{item.data.startingArmorTableFormula}}" placeholder="1d4" data-dtype="String" />
+        <input type="text" name="system.startingArmorTableFormula" value="{{data.system.startingArmorTableFormula}}" placeholder="1d4" data-dtype="String" />
       </div>
 
       {{! Starting hit points }}
       <div class="form-group">
         <label>{{localize "PB.HitPoints"}}:</label>
-        <input type="text" name="data.startingHitPoints" value="{{item.data.startingHitPoints}}" placeholder="1d8" data-dtype="String" />
+        <input type="text" name="system.startingHitPoints" value="{{data.system.startingHitPoints}}" placeholder="1d8" data-dtype="String" />
       </div>
 
       <br />
@@ -72,107 +72,107 @@
       {{! Starting abilities }}
       <div class="form-group">
         <label>{{localize "PB.AbilityScoreFormula"}}:</label>
-        <input type="text" name="data.startingAbilityScoreFormula" value="{{item.data.startingAbilityScoreFormula}}" placeholder="3d6" data-dtype="String" />
+        <input type="text" name="system.startingAbilityScoreFormula" value="{{data.system.startingAbilityScoreFormula}}" placeholder="3d6" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.AbilityStrength"}}:</label>
-        <input type="text" name="data.startingStrengthBonus" value="{{item.data.startingStrengthBonus}}" placeholder="0" data-dtype="String" />
+        <input type="text" name="system.startingStrengthBonus" value="{{data.system.startingStrengthBonus}}" placeholder="0" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.AbilityAgility"}}:</label>
-        <input type="text" name="data.startingAgilityBonus" value="{{item.data.startingAgilityBonus}}" placeholder="0" data-dtype="String" />
+        <input type="text" name="system.startingAgilityBonus" value="{{data.system.startingAgilityBonus}}" placeholder="0" data-dtype="String" />
       </div>
       <div class="form-group">
         <label>{{localize "PB.AbilityPresence"}}:</label>
-        <input type="text" name="data.startingPresenceBonus" value="{{item.data.startingPresenceBonus}}" placeholder="0" data-dtype="String" />
+        <input type="text" name="system.startingPresenceBonus" value="{{data.system.startingPresenceBonus}}" placeholder="0" data-dtype="String" />
       </div>
       <div class="form-group">
         <label>{{localize "PB.AbilityToughness"}}:</label>
-        <input type="text" name="data.startingToughnessBonus" value="{{item.data.startingToughnessBonus}}" placeholder="0" data-dtype="String" />
+        <input type="text" name="system.startingToughnessBonus" value="{{data.system.startingToughnessBonus}}" placeholder="0" data-dtype="String" />
       </div>
       <div class="form-group">
         <label>{{localize "PB.AbilitySpirit"}}:</label>
-        <input type="text" name="data.startingSpiritBonus" value="{{item.data.startingSpiritBonus}}" placeholder="0" data-dtype="String" />
+        <input type="text" name="system.startingSpiritBonus" value="{{data.system.startingSpiritBonus}}" placeholder="0" data-dtype="String" />
       </div>
 
       <br />
 
       <div class="form-group">
         <label>{{localize "PB.StartingItems"}}:</label>
-        <textarea name="data.startingItems" placeholder="compendium;item" rows="4">{{item.data.startingItems}}</textarea>
+        <textarea name="system.startingItems" placeholder="compendium;item" rows="4">{{data.system.startingItems}}</textarea>
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.StartingRolls"}}:</label>
-        <textarea name="data.startingRolls" placeholder="compendium;table;count" rows="4">{{item.data.startingRolls}}</textarea>
+        <textarea name="system.startingRolls" placeholder="compendium;table;count" rows="4">{{data.system.startingRolls}}</textarea>
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.StartingMacro"}}:</label>
-        <input type="text" name="data.startingMacro" value="{{item.data.startingMacro}}" placeholder="compendium;macro" data-dtype="String" />
+        <input type="text" name="system.startingMacro" value="{{data.system.startingMacro}}" placeholder="compendium;macro" data-dtype="String" />
       </div>
 
       <br />
 
       <div class="form-group">
         <label>{{localize "PB.GettingBetterRolls"}}:</label>
-        <textarea name="data.gettingBetterRolls" placeholder="compendium;table;count" rows="4">{{item.data.gettingBetterRolls}}</textarea>
+        <textarea name="system.gettingBetterRolls" placeholder="compendium;table;count" rows="4">{{data.system.gettingBetterRolls}}</textarea>
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.GettingBetterMacro"}}:</label>
-        <input type="text" name="data.gettingBetterMacro" value="{{item.data.gettingBetterMacro}}" placeholder="compendium;macro" data-dtype="String" />
+        <input type="text" name="system.gettingBetterMacro" value="{{data.system.gettingBetterMacro}}" placeholder="compendium;macro" data-dtype="String" />
       </div>
 
       <br />
 
       <div class="form-group">
         <label>{{localize "PB.ExtraResourceUse"}}:</label>
-        <input type="checkbox" name="data.useExtraResource" {{checked item.data.useExtraResource}} data-dtype="Boolean" />
+        <input type="checkbox" name="system.useExtraResource" {{checked data.system.useExtraResource}} data-dtype="Boolean" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.ExtraResourceNameSingular"}}:</label>
-        <input type="text" name="data.extraResourceNameSingular" value="{{item.data.extraResourceNameSingular}}" placeholder="" data-dtype="String" />
+        <input type="text" name="system.extraResourceNameSingular" value="{{data.system.extraResourceNameSingular}}" placeholder="" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.ExtraResourceNamePlural"}}:</label>
-        <input type="text" name="data.extraResourceNamePlural" value="{{item.data.extraResourceNamePlural}}" placeholder="" data-dtype="String" />
+        <input type="text" name="system.extraResourceNamePlural" value="{{data.system.extraResourceNamePlural}}" placeholder="" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.ExtraResourceFormula"}}:</label>
-        <input type="text" name="data.extraResourceFormula" value="{{item.data.extraResourceFormula}}" placeholder="1d6" data-dtype="String" />
+        <input type="text" name="system.extraResourceFormula" value="{{data.system.extraResourceFormula}}" placeholder="1d6" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.ExtraResourceFormulaLabel"}}:</label>
-        <input type="text" name="data.extraResourceFormulaLabel" value="{{item.data.extraResourceFormulaLabel}}" placeholder="" data-dtype="String" />
+        <input type="text" name="system.extraResourceFormulaLabel" value="{{data.system.extraResourceFormulaLabel}}" placeholder="" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.ExtraResourceTestFormula"}}:</label>
-        <input type="text" name="data.extraResourceTestFormula" value="{{item.data.extraResourceTestFormula}}" placeholder="1d6" data-dtype="String" />
+        <input type="text" name="system.extraResourceTestFormula" value="{{data.system.extraResourceTestFormula}}" placeholder="1d6" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.ExtraResourceTestFormulaLabel"}}:</label>
-        <input type="text" name="data.extraResourceTestFormulaLabel" value="{{item.data.extraResourceTestFormulaLabel}}" placeholder="" data-dtype="String" />
+        <input type="text" name="system.extraResourceTestFormulaLabel" value="{{data.system.extraResourceTestFormulaLabel}}" placeholder="" data-dtype="String" />
       </div>
 
       <br />
 
       <div class="form-group">
         <label>{{localize "PB.BaseClassRequired"}}:</label>
-        <input type="checkbox" name="data.requireBaseClass" {{checked item.data.requireBaseClass}} data-dtype="Boolean" />
+        <input type="checkbox" name="system.requireBaseClass" {{checked data.system.requireBaseClass}} data-dtype="Boolean" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.CharacterGeneratorMacro"}}:</label>
-        <input type="text" name="data.characterGeneratorMacro" value="{{item.data.characterGeneratorMacro}}" placeholder="" data-dtype="String" />
+        <input type="text" name="system.characterGeneratorMacro" value="{{data.system.characterGeneratorMacro}}" placeholder="" data-dtype="String" />
       </div>
     </div>
   </section>
