--- a/templates/item/container-sheet.html
+++ b/templates/item/container-sheet.html
@@ -2,14 +2,14 @@
   {{! Sheet Header }}
   <header class="sheet-header flexrow">
     <div class="header-col1">
-      <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img" />
+      <img class="profile-img" src="{{data.img}}" title="{{data.name}}" data-edit="img" />
     </div>
     <div class="header-col2">
       <div class="header-title-row">
-        <input name="name" type="text" value="{{item.name}}" placeholder="{{localize 'PB.ItemName'}}" />
+        <input name="name" type="text" value="{{data.name}}" placeholder="{{localize 'PB.ItemName'}}" />
       </div>
       <div class="header-subtitle-row">
-        <span class="item-type">{{item.type}}</span>
+        <span class="item-type">{{data.type}}</span>
       </div>
     </div>
   </header>
@@ -26,7 +26,7 @@
   <section class="sheet-body">
     {{! Description Tab }}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=item.data.description target="data.description" button=true owner=owner editable=true}}
+      {{wysiwig content=data.system.description target="system.description" button=true owner=owner editable=true}}
     </div>
 
     {{! Details Tab }}
@@ -34,19 +34,19 @@
       {{! Price }}
       <div class="form-group">
         <label>{{localize "PB.ItemPrice"}}:</label>
-        <input type="text" name="data.price" value="{{item.data.price}}" placeholder="2" data-dtype="Number" />
+        <input type="text" name="system.price" value="{{data.system.price}}" placeholder="2" data-dtype="Number" />
       </div>
 
       {{! Carry weight }}
       <div class="form-group">
         <label>{{localize "PB.CarryWeight"}}:</label>
-        <input type="text" name="data.carryWeight" value="{{item.data.carryWeight}}" placeholder="1" data-dtype="Number" />
+        <input type="text" name="system.carryWeight" value="{{data.system.carryWeight}}" placeholder="1" data-dtype="Number" />
       </div>
 
       {{! Capacity }}
       <div class="form-group">
         <label>{{localize "PB.ItemCapacity"}}:</label>
-        <input type="text" name="data.capacity" value="{{item.data.capacity}}" placeholder="1d4" data-dtype="Number" />
+        <input type="text" name="system.capacity" value="{{data.system.capacity}}" placeholder="1d4" data-dtype="Number" />
       </div>
     </div>
   </section>
