--- a/templates/item/feature-sheet.html
+++ b/templates/item/feature-sheet.html
@@ -2,14 +2,14 @@
   {{! Sheet Header }}
   <header class="sheet-header flexrow">
     <div class="header-col1">
-      <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img" />
+      <img class="profile-img" src="{{data.img}}" title="{{data.name}}" data-edit="img" />
     </div>
     <div class="header-col2">
       <div class="header-title-row">
-        <input name="name" type="text" value="{{item.name}}" placeholder="{{localize 'PB.ItemName'}}" />
+        <input name="name" type="text" value="{{data.name}}" placeholder="{{localize 'PB.ItemName'}}" />
       </div>
       <div class="header-subtitle-row">
-        <span class="item-type">{{item.type}} {{#if item.data.featureType}} - {{item.data.featureType}}{{/if}}</span>
+        <span class="item-type">{{data.type}} {{#if data.system.featureType}} - {{data.system.featureType}}{{/if}}</span>
       </div>
     </div>
   </header>
@@ -26,7 +26,7 @@
   <section class="sheet-body">
     {{! Description Tab }}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=item.data.description target="data.description" button=true owner=owner editable=true}}
+      {{wysiwig content=data.system.description target="system.description" button=true owner=owner editable=true}}
     </div>
 
     {{! Details Tab }}
@@ -34,44 +34,44 @@
       {{! Feature Type }}
       <div class="form-group">
         <label>{{localize "PB.FeatureType"}}:</label>
-        <input type="text" name="data.featureType" value="{{item.data.featureType}}" placeholder="" data-dtype="String" />
+        <input type="text" name="system.featureType" value="{{data.system.featureType}}" placeholder="" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.Quantity"}}:</label>
-        <input type="text" name="data.quantity" value="{{item.data.quantity}}" placeholder="1" data-dtype="Number" />
+        <input type="text" name="system.quantity" value="{{data.system.quantity}}" placeholder="1" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.MaxQuantity"}}:</label>
-        <input type="text" name="data.maxQuantity" value="{{item.data.maxQuantity}}" placeholder="1" data-dtype="Number" />
+        <input type="text" name="system.maxQuantity" value="{{data.system.maxQuantity}}" placeholder="1" data-dtype="Number" />
       </div>
 
       {{! Action Macro }}
       <div class="form-group">
         <label>{{localize "PB.ActionMacro"}}:</label>
-        <input type="text" name="data.actionMacro" value="{{item.data.actionMacro}}" placeholder="compendium;macro" data-dtype="String" />
+        <input type="text" name="system.actionMacro" value="{{data.system.actionMacro}}" placeholder="compendium;macro" data-dtype="String" />
       </div>
 
       {{! Action Macro Label }}
       <div class="form-group">
         <label>{{localize "PB.ActionMacroLabel"}}:</label>
-        <input type="text" name="data.actionMacroLabel" value="{{item.data.actionMacroLabel}}" placeholder="Use" data-dtype="String" />
+        <input type="text" name="system.actionMacroLabel" value="{{data.system.actionMacroLabel}}" placeholder="Use" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.StartingBonusItems"}}:</label>
-        <textarea name="data.startingBonusItems" placeholder="compendium;item" rows="4">{{item.data.startingBonusItems}}</textarea>
+        <textarea name="system.startingBonusItems" placeholder="compendium;item" rows="4">{{data.system.startingBonusItems}}</textarea>
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.StartingBonusRolls"}}:</label>
-        <textarea name="data.startingBonusRolls" placeholder="compendium;table;count" rows="4">{{item.data.startingBonusRolls}}</textarea>
+        <textarea name="system.startingBonusRolls" placeholder="compendium;table;count" rows="4">{{data.system.startingBonusRolls}}</textarea>
       </div>
 
       <div class="form-group">
         <label>{{localize "PB.FlavorText"}}:</label>
-        <textarea name="data.flavorText" rows="8">{{item.data.flavorText}}</textarea>
+        <textarea name="system.flavorText" rows="8">{{data.system.flavorText}}</textarea>
       </div>
     </div>
   </section>
