--- a/templates/item/shanty-sheet.html
+++ b/templates/item/shanty-sheet.html
@@ -2,14 +2,14 @@
   {{! Sheet Header }}
   <header class="sheet-header flexrow">
     <div class="header-col1">
-      <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img" />
+      <img class="profile-img" src="{{data.img}}" title="{{data.name}}" data-edit="img" />
     </div>
     <div class="header-col2">
       <div class="header-title-row">
-        <input name="name" type="text" value="{{item.name}}" placeholder="{{localize 'PB.ItemName'}}" />
+        <input name="name" type="text" value="{{data.name}}" placeholder="{{localize 'PB.ItemName'}}" />
       </div>
       <div class="header-subtitle-row">
-        <span class="item-type">{{item.type}}</span>
+        <span class="item-type">{{data.type}}</span>
       </div>
     </div>
   </header>
@@ -26,7 +26,7 @@
   <section class="sheet-body">
     {{! Description Tab }}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=item.data.description target="data.description" button=true owner=owner editable=true}}
+      {{wysiwig content=data.system.description target="system.description" button=true owner=owner editable=true}}
     </div>
 
     {{! Details Tab }}
@@ -34,13 +34,13 @@
       {{! Action Macro }}
       <div class="form-group">
         <label>{{localize "PB.ActionMacro"}}:</label>
-        <input type="text" name="data.actionMacro" value="{{item.data.actionMacro}}" placeholder="compendium;macro" data-dtype="String" />
+        <input type="text" name="system.actionMacro" value="{{data.system.actionMacro}}" placeholder="compendium;macro" data-dtype="String" />
       </div>
 
       {{! Action Macro Label }}
       <div class="form-group">
         <label>{{localize "PB.ActionMacroLabel"}}:</label>
-        <input type="text" name="data.actionMacroLabel" value="{{item.data.actionMacroLabel}}" placeholder="Use" data-dtype="String" />
+        <input type="text" name="system.actionMacroLabel" value="{{data.system.actionMacroLabel}}" placeholder="Use" data-dtype="String" />
       </div>
     </div>
   </section>
