--- a/scss/pirateborg/_foundry-overrides.scss
+++ b/scss/pirateborg/_foundry-overrides.scss
@@ -912,3 +912,11 @@ footer.nue {
   color: black;
   border-top: 2px groove var(--light-border-color);
 }
+
+h3 {
+  border-bottom: 0;
+}
+
+.sheet.journal-entry .journal-entry-content {
+  background: url(/systems/pirateborg/ui/parchment-2.jpg);
+}
