Final proof reading

--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -53,7 +53,7 @@
           data-dtype="Number"
           size="3"
         />
-        <span class="ability-label rollable strength">{{ localize 'PB.AbilityStrength' }}</span>
+        <span class="ability-label rollable strength" title="{{ localize 'PB.AbilityStrengthDescription' }}">{{ localize 'PB.AbilityStrength' }}</span>
       </div>
       <div class="ability-row">
         <input
@@ -64,7 +64,7 @@
           data-dtype="Number"
           size="3"
         />
-        <span class="ability-label rollable agility">{{ localize 'PB.AbilityAgility' }}</span>
+        <span class="ability-label rollable agility" title="{{ localize 'PB.AbilityAgilityDescription' }}">{{ localize 'PB.AbilityAgility' }}</span>
       </div>
       <div class="ability-row">
         <input
@@ -75,7 +75,7 @@
           data-dtype="Number"
           size="3"
         />
-        <span class="ability-label rollable presence">{{ localize 'PB.AbilityPresence' }}</span>
+        <span class="ability-label rollable presence" title="{{ localize 'PB.AbilityPresenceDescription' }}">{{ localize 'PB.AbilityPresence' }}</span>
       </div>
       <div class="ability-row">
         <input
@@ -86,7 +86,7 @@
           data-dtype="Number"
           size="3"
         />
-        <span class="ability-label rollable toughness">{{ localize 'PB.AbilityToughness' }}</span>
+        <span class="ability-label rollable toughness" title="{{ localize 'PB.AbilityToughnessDescription' }}">{{ localize 'PB.AbilityToughness' }}</span>
       </div>
       <div class="ability-row">
         <input
@@ -97,7 +97,7 @@
           data-dtype="Number"
           size="3"
         />
-        <span class="ability-label rollable spirit">{{ localize 'PB.AbilitySpirit' }}</span>
+        <span class="ability-label rollable spirit" title="{{ localize 'PB.AbilitySpiritDescription' }}">{{ localize 'PB.AbilitySpirit' }}</span>
       </div>
     </div>
   </header>
