--- a/templates/actor/vehicle-sheet.html
+++ b/templates/actor/vehicle-sheet.html
@@ -42,7 +42,7 @@
           data-dtype="Number"
           size="3"
         />
-        <span class="ability-label rollable agility">{{ localize 'PB.AbilityAgility' }}</span>
+        <span class="ability-label rollable agility" title="{{ localize 'PB.AbilityAgilityShipDescription' }}">{{ localize 'PB.AbilityAgility' }}</span>
       </div>
       <div class="ability-row">
         <input
@@ -53,7 +53,7 @@
           data-dtype="Number"
           size="3"
         />
-        <span class="ability-label rollable skill">{{ localize 'PB.AbilitySkill' }}</span>
+        <span class="ability-label rollable skill"  title="{{ localize 'PB.AbilitySkillShipDescription' }}">{{ localize 'PB.AbilitySkill' }}</span>
       </div>
       <div class="ability-row">
         <input
