--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -1681,6 +1681,7 @@ h3 {
 /* Rest and Character Generator Dialogs */
 /* ====================== */
 .custom-dialog {
+  font-family: var(--item-font);
   font-size: 14px;
   margin: 0;
 }
@@ -1728,6 +1729,8 @@ h3 {
 .custom-dialog li label div {
   display: block;
   margin-left: 30px;
+  font-family: var(--item-font);
+  font-size: 12pt;
 }
 .custom-dialog .button-row {
   display: flex;
