--- a/scss/pirateborg/_foundry-overrides.scss
+++ b/scss/pirateborg/_foundry-overrides.scss
@@ -926,3 +926,7 @@ h3 {
 .sheet.journal-entry .journal-entry-content {
   background: url(/systems/pirateborg/ui/parchment-2.jpg);
 }
+
+#playlists .sound-control {
+  color: var(--button-background);
+}
