--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -1529,6 +1529,10 @@ h3 {
   background: url(/systems/pirateborg/ui/parchment-2.jpg);
 }
 
+#playlists .sound-control {
+  color: var(--button-background);
+}
+
 /* ====================== */
 /* Roll Cards */
 /* ====================== */
