--- a/templates/dialog/attack-dialog.html
+++ b/templates/dialog/attack-dialog.html
@@ -52,10 +52,17 @@
       </li>
     </ul>
   </div>
+
   <div class="form-group">
     <label>{{localize "PB.TargetArmor"}}:</label>
-    <input id="targetArmor" type="text" name="targetarmor" value="{{targetArmor}}" placeholder="0" data-dtype="String" />
+    <div class="form-fields">
+      <input id="targetArmor" type="text" name="targetarmor" value="{{targetArmor}}" placeholder="0" data-dtype="String" />
+      {{#if shouldIgnoreArmor}}
+        <div class="form-warning-icon" title="{{localize "PB.ShouldIgnoreArmor"}}"><i class="fas fa-exclamation-circle"></i></div>
+      {{/if}}
+    </div>
   </div>
+
   <div class="form-group form-group-radio-selector">
     <label></label>
     <ul class="radio-group-radio armor-tier">
