--- a/templates/dialog/help-dialog.html
+++ b/templates/dialog/help-dialog.html
@@ -35,7 +35,7 @@
           premium module, it's bursting with ships!
         </p>
         <div class="buttons-row">
-          <a disabled>Coming Soon</a>
+          <a href="https://foundryvtt.com/packages/pirate-borg-premium">Get it on Foundryvtt.com</a>
         </div>
         {{else}}
         <p>The module "{{pbModuleName}}" is available to your world, but not yet enabled.</p>
