--- a/templates/item/shanty-sheet.html
+++ b/templates/item/shanty-sheet.html
@@ -19,6 +19,7 @@
     <span class="spacer"></span>
     <a class="item" data-tab="description">{{localize "PB.TabDescription"}}</a>
     <a class="item" data-tab="details">{{localize "PB.TabDetails"}}</a>
+      <a class="item" data-tab="effects">Effects</a>
     <span class="spacer"></span>
   </nav>
 
@@ -42,6 +43,9 @@
         <label>{{localize "PB.ActionMacroLabel"}}:</label>
         <input type="text" name="system.actionMacroLabel" value="{{data.system.actionMacroLabel}}" placeholder="Use" data-dtype="String" />
       </div>
+    </div>
+        <div class="tab" data-group="primary" data-tab="effects">
+        {{> systems/pirateborg/templates/item/tab/effects.html}}
     </div>
   </section>
 </form>
