--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -110,6 +110,7 @@
     <a class="item" data-tab="equipment">{{ localize 'PB.TabEquipment' }}</a>
     <a class="item" data-tab="features">{{ localize 'PB.TabFeatures' }}</a>
     <a class="item" data-tab="history">{{ localize 'PB.TabHistory' }}</a>
+      <a class="item" data-tab="effects">Effects</a>
     <span class="spacer"></span>
   </nav>
 
@@ -403,5 +404,8 @@
         {{> "systems/pirateborg/templates/actor/common/actor-equipment-list.html"}}
       </ol>
     </div>
+    <div class="tab" data-group="primary" data-tab="effects">
+        {{> systems/pirateborg/templates/actor/common/effects.html}}
+      </div>
   </section>
 </form>
