--- a/templates/actor/container-sheet.html
+++ b/templates/actor/container-sheet.html
@@ -28,6 +28,7 @@
     <a class="item" data-tab="contents">{{ localize "PB.TabContents" }}</a>
     <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
     <a class="item" data-tab="description">{{ localize "PB.TabDescription" }}</a>
+      <a class="item" data-tab="effects">Effects</a>
     <span class="spacer"></span>
   </nav>
 
@@ -55,6 +56,8 @@
       <ol class="items-list equipment-list">
         {{> "systems/pirateborg/templates/actor/common/actor-equipment-list.html"}}
       </ol>
-    </div>
+    </div>    <div class="tab" data-group="primary" data-tab="effects">
+        {{> systems/pirateborg/templates/actor/common/effects.html}}
+      </div>
   </section>
 </form>
