--- a/templates/actor/creature-sheet.html
+++ b/templates/actor/creature-sheet.html
@@ -32,6 +32,7 @@
     <span class="spacer"></span>
     <a class="item" data-tab="description">{{localize "PB.TabDescription"}}</a>
     <a class="item" data-tab="details">{{localize "PB.TabDetails"}}</a>    
+      <a class="item" data-tab="effects">Effects</a>
     <span class="spacer"></span>
   </nav>
 
@@ -78,6 +79,8 @@
         <label>{{localize "PB.CreatureSpecial"}}:</label>
         <textarea name="system.special" rows="10">{{data.system.special}}</textarea>
       </div>
-    </div>
+    </div>    <div class="tab" data-group="primary" data-tab="effects">
+        {{> systems/pirateborg/templates/actor/common/effects.html}}
+      </div>
   </section>
 </form>
