--- a/templates/actor/vehicle-edit-sheet.html
+++ b/templates/actor/vehicle-edit-sheet.html
@@ -20,6 +20,7 @@
     <a class="item" data-tab="description">{{ localize "PB.TabDescription" }}</a>
     <a class="item" data-tab="items">{{ localize "PB.TabEquipment" }}</a>
     <a class="item" data-tab="data">{{ localize "PB.TabDetails" }}</a>
+      <a class="item" data-tab="effects">Effects</a>
     <span class="spacer"></span>
   </nav>
 
@@ -135,6 +136,8 @@
           {{/each}} {{/select}}
         </select>
       </div>
-    </div>
+    </div>    <div class="tab" data-group="primary" data-tab="effects">
+        {{> systems/pirateborg/templates/actor/common/effects.html}}
+      </div>
   </section>
 </form>
