--- a/templates/item/ammo-sheet.html
+++ b/templates/item/ammo-sheet.html
@@ -19,6 +19,7 @@
     <span class="spacer"></span>
     <a class="item" data-tab="description">{{localize "PB.TabDescription"}}</a>
     <a class="item" data-tab="details">{{localize "PB.TabDetails"}}</a>
+      <a class="item" data-tab="effects">Effects</a>
     <span class="spacer"></span>
   </nav>
 
@@ -60,6 +61,8 @@
         <label>{{localize "PB.ItemDamageDie"}}:</label>
         <input type="text" name="system.damageDie" value="{{data.system.damageDie}}" placeholder="1d4" data-dtype="String" />
       </div>
+    </div>        <div class="tab" data-group="primary" data-tab="effects">
+        {{> systems/pirateborg/templates/item/tab/effects.html}}
     </div>
   </section>
 </form>
