--- a/templates/item/background-sheet.html
+++ b/templates/item/background-sheet.html
@@ -19,6 +19,7 @@
     <span class="spacer"></span>
     <a class="item" data-tab="description">{{localize "PB.TabDescription"}}</a>
     <a class="item" data-tab="details">{{localize "PB.TabDetails"}}</a>
+      <a class="item" data-tab="effects">Effects</a>
     <span class="spacer"></span>
   </nav>
 
@@ -46,6 +47,8 @@
         <label>{{localize "PB.StartingBonusRolls"}}:</label>
         <textarea name="system.startingBonusRolls" placeholder="compendium;table;count" rows="4">{{data.system.startingBonusRolls}}</textarea>
       </div>
+    </div>        <div class="tab" data-group="primary" data-tab="effects">
+        {{> systems/pirateborg/templates/item/tab/effects.html}}
     </div>
   </section>
 </form>
