--- a/templates/item/feature-sheet.html
+++ b/templates/item/feature-sheet.html
@@ -19,6 +19,7 @@
     <span class="spacer"></span>
     <a class="item" data-tab="description">{{localize "PB.TabDescription"}}</a>
     <a class="item" data-tab="details">{{localize "PB.TabDetails"}}</a>
+      <a class="item" data-tab="effects">Effects</a>
     <span class="spacer"></span>
   </nav>
 
@@ -73,6 +74,8 @@
         <label>{{localize "PB.FlavorText"}}:</label>
         <textarea name="system.flavorText" rows="8">{{data.system.flavorText}}</textarea>
       </div>
+    </div>        <div class="tab" data-group="primary" data-tab="effects">
+        {{> systems/pirateborg/templates/item/tab/effects.html}}
     </div>
   </section>
 </form>
