--- a/templates/item/hat-sheet.html
+++ b/templates/item/hat-sheet.html
@@ -19,6 +19,7 @@
     <span class="spacer"></span>
     <a class="item" data-tab="description">{{localize "PB.TabDescription"}}</a>
     <a class="item" data-tab="details">{{localize "PB.TabDetails"}}</a>
+      <a class="item" data-tab="effects">Effects</a>
     <span class="spacer"></span>
   </nav>
 
@@ -60,6 +61,8 @@
         <label>{{localize "PB.ContainerSpace"}}:</label>
         <input type="text" name="system.containerSpace" value="{{data.system.containerSpace}}" placeholder="1" data-dtype="Number" />
       </div>
+    </div>        <div class="tab" data-group="primary" data-tab="effects">
+        {{> systems/pirateborg/templates/item/tab/effects.html}}
     </div>
   </section>
 </form>
